2007-07-10  Inge Wallin  <inge@lysator.liu.se>

	Move initialization of the basic image from MarbleModel to
	MarbleWidget
	* src/lib/MarbleModel.cpp (setRadius): Remove most contents
	* src/lib/MarbleWidget.cpp (zoomView): Add the contents from above

	Krazy fix: Use proper include directives
	* src/lib/httpfetchfile.h: Fix include

	Krazy fixes: Add 'explicit' to constructors:
	* src/lib/AbstractScanlineTextureMapper.h,
	src/lib/FlatScanlineTextureMapper.h,
	src/lib/GlobeScanlineTextureMapper.h: Add explict keyword

	Remove m_canvasimg from MarbleModelPrivate.
	* src/lib/MarbleModel.{h,cpp} (paintGlobe): Add parameter canvasImage
	(setRadius): Add parameter canvasImage
	(resize):  Add parameter canvasImage
	(setCanvasImage): removed
	* src/lib/MarbleWidget.cpp: Follow new call signatures

	Remove m_view from MarbleModelPrivate so that the Model no longer
	keeps track of the View.
	* src/lib/MarbleModel.{h,cpp} (setMapTheme): Add a parent
	parameter
	(class MarbleModelPrivate): remove m_view.
	* src/lib/MarbleWidget.cpp (setMapTheme): Use new call convenction.

	Improve parameter parsing in KDE version.
	* src/kdemain.cpp (main): Use KDE classes to parse command line

2007-07-10  Torsten Rahn  <rahn@kde.org>

- Fixed disabled accurate pole texture mapping.
- Fixed miscalculated interpolation borders (will speed up Marble in 
quite some cases)

2007-07-09  Torsten Rahn  <rahn@kde.org>

- "I don't like to give away pizzas for nothing ;-)"-performance patches 
  for mapTexture()
 
  Results in almost 20% better overall performance.

- Better testcase for MarbleTest

- Adding airports ( not done yet ) 

- Small patches by Benoit Sigoure 
  (which result in maybe 1% improved performance here)

- initial changes to tinywebbrowser to get image loading
  for Wikipedia support get done in the future.

2007-07-07  Inge Wallin  <inge@lysator.liu.se>

	d-pointer'ify LegendBrowser
	* src/lib/LegendBrowser.{h,cpp}: Use d-pointer

	Remove inline functions in LegendBrowser