@@ -1,5 +1,11 @@
 2007-07-10  Inge Wallin  <inge@lysator.liu.se>
 
+	Introduce the ViewParams class and move one item into it.
+	* src/lib/ViewParams.{h,cpp}: new files.
+	* src/lib/MarbleWidget.cpp (class MarbleWidgetPrivate): Add
+	m_viewParams and delete m_canvasImage
+	* src/lib/MarbleModel.{h,cpp}: Use ViewParams where applicable.
+	
 	Move initialization of the basic image from MarbleModel to
 	MarbleWidget
 	* src/lib/MarbleModel.cpp (setRadius): Remove most contents
